Fix scrollbar width issue: caused a margin on mobile devices.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -24,7 +24,8 @@ body {
 }
 
 #app {
-  width: calc(100vw - 14px);
+  width: 100vw;
+  max-width: 100%;
   /* height: 100vh; */
   /* background-color: aqua; */
 
@@ -47,7 +48,7 @@ body {
 }
 
 /* Disable certain elements, like click to enlarge photos, on mobile screens */
-@media screen and (max-width: calc(640px + 14px)) {
+@media screen and (max-width: calc(639px)) {
   .mobile_disabled {
     pointer-events: none;
   }
@@ -68,7 +69,7 @@ Header and Header Buttons Styling
 */
 
 #header {
-  width: calc(100vw - 14px - 32px);
+  width: calc(100vw - 32px);
   max-width: calc(1200px - 32px);
   height: 46px;
   padding: 0 16px 0 16px;
@@ -88,7 +89,7 @@ Header and Header Buttons Styling
   z-index: 1;
 }
 
-@media screen and (max-width: calc(600px + 14px)) {
+@media screen and (max-width:599px) {
   #header {
     position: fixed;
     top: unset;
@@ -246,7 +247,7 @@ Bio Styling
   border-radius: 15px; */
 }
 
-@media screen and (max-width: calc(900px + 14px)) and (min-width: calc(600px + 14px)) {
+@media screen and (max-width: 900px) and (min-width: 600px) {
   #twitter_embed {
     grid-column: span 2;
   }
@@ -330,7 +331,8 @@ Projects Styling
   position: fixed;
   top: 0;
   left: 100vw;
-  width: calc(100vw - 14px);
+  width: 100vw;
+  max-width: 100%;
   height: 100vh;
 
   background-color: rgba(49, 49, 49, 0.95);
@@ -358,6 +360,7 @@ figure {
 
 #lightbox > figure > figcaption {
   max-width: 1000px;
+  margin-top: 0.5em;
   margin-left: auto;
   margin-right: auto;
 
@@ -378,7 +381,7 @@ figure {
   text-align: center;
 }
 
-@media screen and (max-width: calc(640px + 14px)) {
+@media screen and (max-width: 639px) {
   .project_bio {
     grid-row-start: 1;
   }
@@ -442,7 +445,7 @@ Background Styling
 */
 
 /* Disable background when hidden */
-@media screen and (max-width: calc(1200px + 14px)) {
+@media screen and (max-width: 1200px) {
   #background {
     display: none;
   }
